--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,113 @@
-certifi==2018.10.15
-Click==7.0
-Flask==1.0.2
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10
-MarkupSafe==1.1.0
-numpy==1.15.4
-pandas==0.23.4
-python-dateutil==2.7.5
-pytz==2018.7
-scikit-learn==0.20.1
-scipy==1.1.0
-six==1.12.0
+altair==4.1.0
+argon2-cffi==20.1.0
+astor==0.8.1
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+base58==2.1.0
+bleach==3.3.0
+blinker==1.4
+cachetools==4.2.4
+certifi==2021.5.30
+cffi==1.14.5
+charset-normalizer==2.0.6
+click==7.1.2
+colorama==0.4.4
+cycler==0.10.0
+daal4py==2021.3.0
+debugpy @ file:///C:/ci/debugpy_1629222819322/work
+decorator==5.0.7
+defusedxml==0.7.1
+dill==0.3.4
+entrypoints==0.3
+Flask==2.0.2
+gitdb==4.0.7
+GitPython==3.1.24
+idna==3.2
+imbalanced-learn==0.8.0
+ipykernel==5.5.3
+ipython==7.22.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.0.2
+joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.2
+lazypredict==0.2.7
+lightgbm==3.2.1
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
+missingno==0.5.0
+mistune==0.8.4
+mkl-fft==1.3.0
+mkl-random @ file:///C:/ci/mkl_random_1626186184308/work
+mkl-service==2.4.0
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.3.0
+numpy==1.21.2
+packaging==20.9
+pandas==1.3.2
+pandocfilters==1.4.3
+parso==0.8.2
+pickleshare==0.7.5
+Pillow==8.3.2
+plotly==5.3.1
+prometheus-client==0.10.1
+prompt-toolkit==3.0.18
+protobuf==3.18.1
+pyarrow==5.0.0
+pycparser==2.20
+pydeck==0.7.0
+Pygments==2.8.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2021.1
+pywin32==300
+pywinpty==0.5.7
+pyzmq==22.0.3
+qtconsole==5.0.3
+QtPy==1.9.0
+requests==2.26.0
+scikit-learn==1.0
+scikit-learn-intelex==2021.20210714.120553
+scipy @ file:///C:/ci/scipy_1630606917240/work
+seaborn==0.11.2
+Send2Trash==1.5.0
+six==1.15.0
 sklearn==0.0
-Werkzeug==0.14.1
-dill==0.2.8.2
+smmap==4.0.0
+streamlit==1.0.0
+tenacity==8.0.1
+terminado==0.9.4
+testpath==0.4.4
+threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
+toml==0.10.2
+toolz==0.11.1
+tornado==6.1
+tqdm==4.62.2
+traitlets==5.0.5
+typing-extensions==3.10.0.2
+tzdata==2021.2.post0
+tzlocal==3.0
+urllib3==1.26.7
+utils==1.0.1
+validators==0.18.2
+watchdog==2.1.6
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.2
+widgetsnbextension==3.5.1
+wincertstore==0.2
